<resources>
    <string name="app_name">BlueMemoir</string>
    <string name="default_web_client_id">546152925779-273vidbeo0gpj7pvus6rhs3drp58vm35.apps.googleusercontent.com</string>
    <string name="map_api">AIzaSyALY79PI3jsgnlIyxYsdA54hHdEdRQeb6M</string>
    <string name="navbar">Bottom Navigation</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="mapview">Coming Soon!</string>
    <string name="profile">Profile</string>
    <string name="nextButton">Next</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="setting">Settings</string>
    <string name="email">Email Address</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="pass">Password</string>
    <string name="enter_pass">Enter Password</string>
    <string name="re_pass">Confirm Password</string>
    <string name="enter_re_pass">Re-enter Password</string>
    <string name="show_pass"> </string>
    <string name="loginButton">Continue</string>
    <string name="rememberMe">Remember me</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="to_sign_up">Don\'t have an account?</string>
    <string name="to_sign_in">Already have an account?</string>
    <string name="dummy_date">23/10/2024</string>
    <string name="dummy_location">Abydos</string>
    <string name="add_title">Title...</string>
    <string name="add_location">Location...</string>
    <string name="add_tag">Travel</string>
    <string name="add_text">Text...</string>
    <string name="search">Search</string>
    <string name="tag">Tag</string>
    <string name="no_diary">Diary not found</string>
    <string name="no_favorite">You have not added any favorites</string>
    <string name="diary_count">Diaries Written: 10</string>
    <string name="user">User</string>
    <string name="allow">Allow</string>
    <string name="name">Name</string>
    <string name="new_pass">New Password</string>
    <string name="notif">Notification</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="newest">Newest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>