<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/favoritebg"
    tools:context=".AllDiary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center_horizontal">

        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_search_button"
            android:fontFamily="@font/baloo"
            android:textColor="@color/white"
            android:gravity="center"
            android:backgroundTint="@null"
            android:text="@string/search"
            android:textAllCaps="false"
            android:contentDescription="@string/google"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/newView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/newest"
            android:textColor="@color/font3"
            android:textSize="30sp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/sliderViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/histView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/history"
            android:textColor="@color/font7"
            android:textSize="24sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:scrollbars="none" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/noDiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_diary"
            android:textSize="18sp"
            android:textColor="@color/font2"
            android:fontFamily="@font/baloo"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

    </LinearLayout>
</RelativeLayout>