<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/detailbg"
    tools:context=".DetailDiary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_background"
                android:src="@drawable/back"
                android:paddingEnd="3dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/nextButton" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_background"
                android:src="@drawable/delete"
                android:scaleType="centerInside"
                android:contentDescription="@string/nextButton" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_background"
                android:src="@drawable/favorite_background"
                android:scaleType="centerInside"
                android:contentDescription="@string/nextButton" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_background"
                android:src="@drawable/edit"
                android:scaleType="centerInside"
                android:contentDescription="@string/nextButton" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/add_title"
                    android:textColor="@color/font7"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/dateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/dummy_date"
                    android:textColor="@color/font6"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/locationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/dummy_location"
                    android:textColor="@color/font7"
                    android:textSize="20sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/tagView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=" "
                    android:background="@drawable/rounded_input"
                    android:fontFamily="@font/baloo"
                    android:hint="@string/add_tag"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/font3"
                    android:textColorHint="@color/font3"
                    android:textSize="20sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/photoCardView"
                    android:layout_width="285dp"
                    android:layout_height="230dp"
                    app:cardBackgroundColor="@color/font3"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/photoCardView2"
                            android:layout_width="275dp"
                            android:layout_height="220dp"
                            app:cardBackgroundColor="@color/font3"
                            app:cardCornerRadius="16dp">

                            <ImageView
                                android:id="@+id/photoView"
                                android:layout_width="275dp"
                                android:layout_height="220dp"
                                android:background="@drawable/insert_image_background"
                                android:scaleType="centerCrop"
                                android:contentDescription="@string/google" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/viewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=" "
                    android:background="@drawable/rounded_input"
                    android:fontFamily="@font/baloo"
                    android:hint="@string/add_text"
                    android:minHeight="48dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/font3"
                    android:textColorHint="@color/font3"
                    android:textSize="24sp" />

            </LinearLayout>
        </ScrollView>
        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>
</RelativeLayout>
